# cloudops-decision-gym

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  constants.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  actions.py  constraints.py  environment.py  state.py
graders/: __init__.py  ec2_grader.py
scenarios/: __init__.py  ec2_multistep_hard.py  ec2_security_medium.py
server/: __init__.py  app.py
src/: app.py  inference.py  openenv_models.py
src/env/: reward.py
src/graders/: ec2_grader.py
src/scenarios/: ec2_cost_easy.py
src/server/: app.py
