[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudops-decision-gym"
version = "0.1.0"
description = "A CloudOps environment for OpenEnv hackathon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "SentnelOps Developer", email = "dev@sentnelops.ai" }
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gradio>=5.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

packages = ["env", "graders", "scenarios", "server"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff"
]
